--- a/Assignment 9/assets/css/style.css
+++ b/Assignment 9/assets/css/style.css
@@ -768,8 +768,8 @@ h1 { font-size: 1.5em; margin: 10px; }
   float: left;
 }
 
-.rating > input { display: none; }
-.rating > label:before {
+.stars-rating .rating > input { display: none; }
+.stars-rating .rating > label:before {
   margin: 5px;
   font-size: 1.25em;
   font-family: FontAwesome;
@@ -777,12 +777,12 @@ h1 { font-size: 1.5em; margin: 10px; }
   content: "\f005";
 }
 
-.rating > .half:before {
+.stars-rating .rating > .half:before {
   content: "\f089";
   position: absolute;
 }
 
-.rating > label {
+.stars-rating .rating > label {
   color: #ddd;
  float: right;
 }
@@ -791,11 +791,11 @@ h1 { font-size: 1.5em; margin: 10px; }
 
 /***** CSS Magic to Highlight Stars on Hover *****/
 
-.rating > input:checked ~ label, /* show gold star when clicked */
-.rating:not(:checked) > label:hover, /* hover current star */
-.rating:not(:checked) > label:hover ~ label { color: #FFD700;  } /* hover previous stars in list */
+.stars-rating .rating > input:checked ~ label, /* show gold star when clicked */
+.stars-rating.rating:not(:checked) > label:hover, /* hover current star */
+.stars-rating.rating:not(:checked) > label:hover ~ label { color: #FFD700;  } /* hover previous stars in list */
 
-.rating > input:checked + label:hover, /* hover current star when changing rating */
-.rating > input:checked ~ label:hover,
-.rating > label:hover ~ input:checked ~ label, /* lighten current selection */
-.rating > input:checked ~ label:hover ~ label { color: #FFED85;  }
+.stars-rating.rating > input:checked + label:hover, /* hover current star when changing rating */
+.stars-rating.rating > input:checked ~ label:hover,
+.stars-rating.rating > label:hover ~ input:checked ~ label, /* lighten current selection */
+.stars-rating.rating > input:checked ~ label:hover ~ label { color: #FFED85;  }
