Final touch ups

--- a/assignment15/assets/less/style.less
+++ b/assignment15/assets/less/style.less
@@ -85,9 +85,9 @@ html {
 }
 .content {
   width: 100%;
-    background: url('../img/league_of_legends.jpg');
+  background: url('../img/league_of_legends.jpg');
   background-repeat: no-repeat;
-  background-size:cover;
+  background-size: cover;
   background-position: top;
 }
 .section1 {
@@ -177,8 +177,7 @@ html {
 }
 .section2 {
   width: 60%;
-  margin: auto;
-  margin-top: 10%;
+  margin: 10% auto auto;
   .first-col {
     padding: 15px;
     color: white;
@@ -266,8 +265,8 @@ html {
     border: 2px solid rgb(135, 189, 101);
     color: rgb(135, 189, 101);
   }
-  .add-article-btn{
-    color: rgb(0, 147, 73);
+  .add-article-btn {
+    color: black;
     font-weight: bold;
     background: transparent;
     border: 1px solid rgb(0, 53, 0);
@@ -417,7 +416,6 @@ footer {
       padding: 0;
       text-align: center;
       background-color: rgb(135, 189, 101);
-
       h3 {
         margin-top: 0;
         color: white;
