--- a/Assignment 9/assets/css/style.css
+++ b/Assignment 9/assets/css/style.css
@@ -66,6 +66,9 @@
 [class^="col-"], [class*=" col-"] {
   float: left;
 }
+.row {
+  margin: 0;
+}
 .container {
   position: relative;
   margin: 0 auto;
@@ -112,7 +115,6 @@ html, body {
 }
 .fa-globe {
   margin-left: 15px;
-  margin-right: -15px;
 }
 .second-header {
   width: 100%;
@@ -205,7 +207,7 @@ html, body {
 }
 .small-image {
   margin-right: 2%;
-  opacity: 0.7;
+  opacity: 0.3;
 }
 a:active, a:focus {
   outline: 0;
@@ -230,15 +232,6 @@ a:active, a:focus {
 .section2-right-content a {
   color: rgb(116, 116, 116);
   font-weight: bold;
-}
-.fa-star {
-  color: rgb(227, 183, 76);
-  font-size: 11px;
-}
-.gray-star {
-  font-size: 11px;
-  color: rgb(204, 204, 204);
-  margin-right: 10%;
 }
 .price {
   margin-top: 4%;
@@ -325,19 +318,6 @@ a:active, a:focus {
   border: 1px solid gray;
   background-color: white;
 }
-
-/*.size-btn:focus {
-  border: 2px solid black;
-  outline: 0;
-  outline-style: none;
-  outline-width: 0;
-}
-.add-to-cart-btn:focus {
-  outline: 0;
-  background-color: rgb(51, 51, 51);
-  color: white;
-}*/
-
 .active-size-btn {
   border: 2px solid black;
   outline: 0;
@@ -415,6 +395,7 @@ a:active, a:focus {
 .section3 {
   width: 100%;
   margin-bottom: 80px;
+  margin-top: 50px;
 }
 .section3-content {
   width: 70%;
@@ -441,106 +422,12 @@ a:active, a:focus {
   width: 70%;
   margin: auto;
 }
-
-/*.
-.section4-content h5{
-  color: white;
+.active {
+  color: rgb(227, 183, 76);
 }
-
-.section5{
-  width: 100%;
-  height: 5%;
-  background-color: rgb(37, 37, 37);
-  color: white;
-  text-align: center;
+.gray-star {
+  color: rgb(204, 204, 204);
 }
-@font-face {
-    font-family: 'si';
-    src: url('socicon-1.3/socicon.eot');
-    src: url('socicon-1.3/socicon.eot?#iefix') format('embedded-opentype'),
-         url('socicon-1.3/socicon.woff') format('woff'),
-         url('socicon-1.3/socicon.ttf') format('truetype'),
-         url('socicon-1.3/socicon.svg#icomoonregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@media screen and (-webkit-min-device-pixel-ratio:0) {
-    @font-face {
-        font-family:si;
-        src: url(socicon-1.3/socicon.svg) format(svg);
-    }
-}
-
-.soc {
-    overflow:hidden;
-    margin:0; padding:0;
-    list-style:none;
-}
-
-.soc li {
-    display:inline-block;
-    *display:inline;
-    zoom:1;
-}
-
-.soc li a {
-    font-family:si!important;
-    font-style:normal;
-    font-weight:400;
-    -webkit-font-smoothing:antialiased;
-    -moz-osx-font-smoothing:grayscale;
-    -webkit-box-sizing:border-box;
-    -moz-box-sizing:border-box;
-    -ms-box-sizing:border-box;
-    -o-box-sizing:border-box;
-    box-sizing:border-box;
-    overflow:hidden;
-    text-decoration:none;
-    text-align:center;
-    display:block;
-    position: relative;
-    z-index: 1;
-    width: 24px;
-    height: 24px;
-    line-height: 24px;
-    font-size: 13px;
-    -webkit-border-radius: 18px;
-    -moz-border-radius: 18px;
-    border-radius: 18px;
-    margin-right: 21px;
-    color: #ababab;
-    background-color: #333333;
-}
-
-.soc-icon-last{
-    margin:0 !important;
-}
-
-.soc-facebook:before {
-    content:'b';
-}
-.soc-twitter:before {
-    content:'a';
-}
-.soc-google:before {
-    content:'c';
-}
-.soc-instagram:before {
-    content:'x';
-}
-.soc-pinterest:before {
-    content:'d';
-}*/
-
-
-/*.section4-content, .about, .title, .support, .title, .news {
-  font-family: 'Pontano Sans', sans-serif;
-  font-weight: bolder;
-  font-size: 17px;
-}*/
-
 .title {
   color: white;
   font-family: 'Pontano Sans', sans-serif;
@@ -742,60 +629,85 @@ input:focus {
 .rating-sidebar ul li i:hover {
   background-color: gray;
 }
-
-
-fieldset {
-  display: block;
+.dropdown {
+  display: inline;
 }
-
+.border-right {
+  border-right: 1px solid white;
+}
+.dropdown button {
+  background-color: rgb(51, 51, 51);
+  color: white;
+  border: none;
+}
+.dropdown button:hover {
+  background-color: inherit;
+  color: white;
+}
+button:focus {
+  outline: none;
+}
 .stars-rating {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
 
-
 @import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
-
-fieldset, label { margin: 0; padding: 0; }
-body{ margin: 20px; }
-h1 { font-size: 1.5em; margin: 10px; }
+fieldset, label {
+  margin: 0;
+  padding: 0;
+}
+h1 {
+  font-size: 1.5em;
+  margin: 10px;
+}
 
 /****** Style Star Rating Widget *****/
 
 .rating {
   border: none;
-  float: left;
+  row float: left;
 }
-
-.stars-rating .rating > input { display: none; }
-.stars-rating .rating > label:before {
+.rating > input {
+  display: none;
+}
+.rating > label:before {
   margin: 5px;
   font-size: 1.25em;
   font-family: FontAwesome;
   display: inline-block;
   content: "\f005";
 }
-
-.stars-rating .rating > .half:before {
+.rating > .half:before {
   content: "\f089";
   position: absolute;
 }
-
-.stars-rating .rating > label {
+.rating > label {
   color: #ddd;
- float: right;
+  float: right;
 }
-
-
 
 /***** CSS Magic to Highlight Stars on Hover *****/
 
-.stars-rating .rating > input:checked ~ label, /* show gold star when clicked */
-.stars-rating.rating:not(:checked) > label:hover, /* hover current star */
-.stars-rating.rating:not(:checked) > label:hover ~ label { color: #FFD700;  } /* hover previous stars in list */
+.rating > input:checked ~ label,
+/* show gold star when clicked */
 
-.stars-rating.rating > input:checked + label:hover, /* hover current star when changing rating */
-.stars-rating.rating > input:checked ~ label:hover,
-.stars-rating.rating > label:hover ~ input:checked ~ label, /* lighten current selection */
-.stars-rating.rating > input:checked ~ label:hover ~ label { color: #FFED85;  }
+.rating:not(:checked) > label:hover,
+/* hover current star */
+
+.rating:not(:checked) > label:hover ~ label {
+  color: #FFD700;
+}
+
+/* hover previous stars in list */
+
+.rating > input:checked + label:hover,
+/* hover current star when changing rating */
+
+.rating > input:checked ~ label:hover, .rating > label:hover ~ input:checked ~ label,
+/* lighten current selection */
+
+.rating > input:checked ~ label:hover ~ label {
+  color: #FFED85;
+}
